--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,17 +10,23 @@ else {
 def version_code_env = System.getenv("version_code")
 def version_name_env = System.getenv("version_name")
 def app_name_env = System.getenv("app_name")
+def suffix_env =  System.getenv("suffix")
 
 def version_code =  version_code_env != null ? Integer.parseInt(version_code_env): 1
 def version_name =  version_name_env != null ? version_name_env : "0.1"
 def app_name     =  app_name_env     != null ? '"' + app_name_env + '"' : '"Brogue"'
-
+def suffix       =  suffix_env != null ? '.'+suffix_env.replace('-','_')
+        .replace('.','_').replace(' ','_'):null
 
 android {
     compileSdkVersion 26
     defaultConfig {
         if (buildAsApplication) {
-            applicationId "org.brogue.brogue"
+            if(suffix_env) {
+                applicationId "org.brogue.brogue" + suffix
+            }else{
+                applicationId "org.brogue.brogue"
+            }
             resValue 'string', 'app_name', app_name
         }
         minSdkVersion 16
